--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,14 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+this is an simple exercise on :
+  1- create a RoR app on www.nitrous.io
+  2- push a repository from command line
+  3- deploy the app to heroku 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+https://www.youtube.com/watch?v=beqXhAO4UBc&index=2&list=PLgYiyoyNPrv-j6vFyXP8mgRyvpRqFkjb8
+https://www.youtube.com/watch?v=6UcjERNFTH4&index=3&list=PLgYiyoyNPrv-j6vFyXP8mgRyvpRqFkjb8
+https://www.youtube.com/watch?v=mabGJ-vuABc&list=PLgYiyoyNPrv-j6vFyXP8mgRyvpRqFkjb8&index=4
+
+
+Please feel free to test it ::
+
+https://raillshello.herokuapp.com/hellos
